--- a/index.html
+++ b/index.html
@@ -12,19 +12,18 @@
         <div class="card">
             <div class="sneaker">
                 <div class="circle"></div>
-                <img src="./adidas.png" alt="adidas">
+                <img src="./flowers.png" alt="adidas">
             </div>
             <div class="info">
-                <h1 class="title">Adidas ZX</h1>
-                <h3>FUTURE-READY TRAINERS WITH WRAPPED BOOST FOR EXCEPTION COMFORT.</h3>
+                <h1 class="title">Justice Team</h1>
+                <h3>Поздравляет своих милых дам с 8 марта!</h3>
                 <div class="sizes">
-                    <button>39</button>
-                    <button>40</button>
-                    <button class="active">42</button>
-                    <button>44</button>
+                    <button>Успехов</button>
+                    <button>Улыбок</button>
+                    <button>Счастья</button>
                 </div>
                 <div class="purchase">
-                    <button>Purchase</button>
+                    <button>Закрыть</button>
                 </div>
             </div>
         </div>
